generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Organization {
  id                 String                 @id @default(uuid())
  name               String
  slug               String                 @unique
  taxId              String?
  phone              String?
  address            String?
  settings           Json                   @default("{}")
  active             Boolean                @default(true)
  createdAt          DateTime               @default(now())
  updatedAt          DateTime               @updatedAt
  logoUrl            String?
  status             OrgStatus              @default(TRIAL)
  trialEndsAt        DateTime?
  pastDueAt          DateTime?
  billingStatus      BillingStatus          @default(PENDING)
  plan               PlanType               @default(BASIC)
  auditLogs          AuditLog[]
  cashRegisters      CashRegister[]
  categories         Category[]
  customers          Customer[]
  expenseCategories  ExpenseCategory[]
  expensePayments    ExpensePayment[]
  expenses           Expense[]
  inventoryMovements InventoryMovement[]
  sequences          OrganizationSequence[]
  users              OrganizationUser[]
  payments           Payment[]
  paymentRecords     PaymentRecord[]
  products           Product[]
  purchaseOrders     PurchaseOrder[]
  purchaseOrderItems PurchaseOrderItem[]
  sales              Sale[]
  saleItems          SaleItem[]
  suppliers          Supplier[]
  tasks              Task[]
  taskEvents         TaskEvent[]

  @@index([status, trialEndsAt])
}

model User {
  id                 String              @id @default(uuid())
  email              String              @unique
  password           String
  name               String
  active             Boolean             @default(true)
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  tokenVersion       Int                 @default(0)
  isSuperAdmin       Boolean             @default(false)
  auditLogs          AuditLog[]
  expensesCreated    Expense[]           @relation("ExpenseCreatedBy")
  inventoryMovements InventoryMovement[]
  organizationUsers  OrganizationUser[]
  purchaseOrders     PurchaseOrder[]
  refreshTokens      RefreshToken[]
  sales              Sale[]
  tasksAssigned      Task[]              @relation("TaskAssignedTo")
  tasksCreated       Task[]              @relation("TaskCreatedBy")
  taskEvents         TaskEvent[]         @relation("TaskEventCreatedBy")
}

model OrganizationUser {
  id             String       @id @default(uuid())
  userId         String
  organizationId String
  role           OrgRole      @default(MEMBER)
  joinedAt       DateTime     @default(now())
  invitedById    String?
  isPrimaryOwner Boolean      @default(false)
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, organizationId])
  @@index([organizationId])
}

model RefreshToken {
  id        String    @id @default(uuid())
  token     String    @unique
  userId    String
  expiresAt DateTime
  revokedAt DateTime?
  ipAddress String?
  userAgent String?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([token])
}

model OrganizationSequence {
  id             String       @id @default(uuid())
  organizationId String
  type           String
  prefix         String?
  currentNumber  Int          @default(0)
  year           Int?
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@unique([organizationId, type, year])
  @@index([organizationId])
}

model CashRegister {
  id             String       @id @default(uuid())
  organizationId String
  name           String
  isDefault      Boolean      @default(false)
  active         Boolean      @default(true)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@unique([organizationId, name])
  @@index([organizationId])
}

model Category {
  id             String       @id @default(uuid())
  name           String
  description    String?
  active         Boolean      @default(true)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  defaultTaxRate Decimal?     @db.Decimal(5, 2)
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  products       Product[]

  @@unique([organizationId, name])
  @@index([organizationId, active])
}

model Product {
  id                  String              @id @default(uuid())
  name                String
  sku                 String
  barcode             String?
  description         String?
  costPrice           Decimal             @db.Decimal(10, 2)
  salePrice           Decimal             @db.Decimal(10, 2)
  taxRate             Decimal             @default(0) @db.Decimal(5, 2)
  stock               Int                 @default(0)
  minStock            Int                 @default(0)
  imageUrl            String?
  categoryId          String
  active              Boolean             @default(true)
  createdAt           DateTime            @default(now())
  updatedAt           DateTime            @updatedAt
  version             Int                 @default(0)
  preferredSupplierId String?
  organizationId      String
  movements           InventoryMovement[]
  category            Category            @relation(fields: [categoryId], references: [id])
  organization        Organization        @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  preferredSupplier   Supplier?           @relation("PreferredSupplier", fields: [preferredSupplierId], references: [id])
  purchaseItems       PurchaseOrderItem[]
  saleItems           SaleItem[]

  @@unique([organizationId, sku])
  @@unique([organizationId, barcode])
  @@index([organizationId, active])
  @@index([organizationId, categoryId])
}

model InventoryMovement {
  id             String       @id @default(uuid())
  productId      String
  type           MovementType
  quantity       Int
  previousStock  Int
  newStock       Int
  reason         String
  userId         String?
  saleId         String?
  createdAt      DateTime     @default(now())
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  product        Product      @relation(fields: [productId], references: [id])
  sale           Sale?        @relation(fields: [saleId], references: [id])
  user           User?        @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([organizationId, productId, createdAt])
}

model Customer {
  id             String          @id @default(uuid())
  name           String
  documentType   String
  documentNumber String
  email          String?
  phone          String?
  address        String?
  segment        CustomerSegment @default(OCCASIONAL)
  active         Boolean         @default(true)
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  organizationId String
  organization   Organization    @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  sales          Sale[]

  @@unique([organizationId, documentNumber])
  @@index([organizationId, active])
  @@index([organizationId, segment])
}

model Sale {
  id                 String              @id @default(uuid())
  saleNumber         Int
  customerId         String?
  subtotal           Decimal             @db.Decimal(10, 2)
  taxAmount          Decimal             @db.Decimal(10, 2)
  discountAmount     Decimal             @default(0) @db.Decimal(10, 2)
  total              Decimal             @db.Decimal(10, 2)
  amountPaid         Decimal             @db.Decimal(10, 2)
  change             Decimal?            @db.Decimal(10, 2)
  status             SaleStatus          @default(COMPLETED)
  userId             String?
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  cancelReason       String?
  cancelledAt        DateTime?
  cancelledById      String?
  organizationId     String
  inventoryMovements InventoryMovement[]
  payments           Payment[]
  customer           Customer?           @relation(fields: [customerId], references: [id])
  organization       Organization        @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user               User?               @relation(fields: [userId], references: [id], onDelete: SetNull)
  items              SaleItem[]

  @@unique([organizationId, saleNumber])
  @@index([organizationId, createdAt, status])
  @@index([organizationId, userId])
  @@index([organizationId, customerId])
}

model Payment {
  id             String        @id @default(uuid())
  saleId         String
  method         PaymentMethod
  amount         Decimal       @db.Decimal(10, 2)
  createdAt      DateTime      @default(now())
  organizationId String
  organization   Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  sale           Sale          @relation(fields: [saleId], references: [id])

  @@index([organizationId, saleId])
}

model SaleItem {
  id             String       @id @default(uuid())
  saleId         String
  productId      String
  quantity       Int
  unitPrice      Decimal      @db.Decimal(10, 2)
  taxRate        Decimal      @db.Decimal(5, 2)
  discountAmount Decimal      @default(0) @db.Decimal(10, 2)
  subtotal       Decimal      @db.Decimal(10, 2)
  total          Decimal      @db.Decimal(10, 2)
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  product        Product      @relation(fields: [productId], references: [id])
  sale           Sale         @relation(fields: [saleId], references: [id])

  @@index([organizationId, saleId])
  @@index([organizationId, productId])
}

model Task {
  id             String       @id @default(uuid())
  title          String
  description    String?
  status         TaskStatus   @default(PENDING)
  createdById    String
  assignedToId   String?
  dueDate        DateTime?
  deletedAt      DateTime?
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  organizationId String
  assignedTo     User?        @relation("TaskAssignedTo", fields: [assignedToId], references: [id])
  createdBy      User         @relation("TaskCreatedBy", fields: [createdById], references: [id])
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  events         TaskEvent[]

  @@index([organizationId, status, createdAt])
  @@index([organizationId, assignedToId, status])
  @@index([organizationId, createdById, updatedAt])
  @@index([organizationId, deletedAt])
}

model TaskEvent {
  id             String        @id @default(uuid())
  taskId         String
  type           TaskEventType
  fromStatus     TaskStatus?
  toStatus       TaskStatus
  note           String?
  createdById    String
  createdAt      DateTime      @default(now())
  organizationId String
  createdBy      User          @relation("TaskEventCreatedBy", fields: [createdById], references: [id])
  organization   Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  task           Task          @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([organizationId, taskId, createdAt])
  @@index([organizationId, createdById, createdAt])
}

model Supplier {
  id             String          @id @default(uuid())
  name           String
  documentNumber String
  email          String?
  phone          String?
  address        String?
  contactName    String?
  active         Boolean         @default(true)
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  organizationId String
  expenses       Expense[]
  preferredBy    Product[]       @relation("PreferredSupplier")
  purchaseOrders PurchaseOrder[]
  organization   Organization    @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@unique([organizationId, documentNumber])
  @@index([organizationId, active])
  @@index([organizationId, name])
}

model PurchaseOrder {
  id             String              @id @default(uuid())
  orderNumber    Int
  supplierId     String
  createdById    String
  status         PurchaseOrderStatus @default(DRAFT)
  subtotal       Decimal             @default(0) @db.Decimal(12, 2)
  taxAmount      Decimal             @default(0) @db.Decimal(12, 2)
  total          Decimal             @default(0) @db.Decimal(12, 2)
  notes          String?
  confirmedAt    DateTime?
  receivedAt     DateTime?
  cancelledAt    DateTime?
  cancelReason   String?
  createdAt      DateTime            @default(now())
  updatedAt      DateTime            @updatedAt
  organizationId String
  createdBy      User                @relation(fields: [createdById], references: [id])
  organization   Organization        @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  supplier       Supplier            @relation(fields: [supplierId], references: [id])
  expenses       Expense[]
  items          PurchaseOrderItem[]

  @@unique([organizationId, orderNumber])
  @@index([organizationId, status])
  @@index([organizationId, supplierId])
  @@index([organizationId, createdAt])
}

model PurchaseOrderItem {
  id              String        @id @default(uuid())
  purchaseOrderId String
  productId       String
  qtyOrdered      Int
  qtyReceived     Int           @default(0)
  unitCost        Decimal       @db.Decimal(10, 2)
  taxRate         Decimal       @default(0) @db.Decimal(5, 2)
  subtotal        Decimal       @db.Decimal(12, 2)
  taxAmount       Decimal       @default(0) @db.Decimal(12, 2)
  organizationId  String
  organization    Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  product         Product       @relation(fields: [productId], references: [id])
  purchaseOrder   PurchaseOrder @relation(fields: [purchaseOrderId], references: [id], onDelete: Cascade)

  @@index([organizationId, purchaseOrderId])
  @@index([organizationId, productId])
}

model AuditLog {
  id             String       @id @default(uuid())
  userId         String?
  action         String
  resource       String
  resourceId     String?
  metadata       Json?
  createdAt      DateTime     @default(now())
  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user           User?        @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([organizationId, createdAt])
  @@index([organizationId, action])
  @@index([organizationId, resource])
}

model PaymentRecord {
  id             String           @id @default(uuid())
  organizationId String
  amount         Decimal          @db.Decimal(10, 2)
  method         PaymentMethod
  date           DateTime
  status         PaymentRecordStatus @default(PENDING)
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt

  organization   Organization     @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@index([organizationId])
  @@index([organizationId, date])
}

model ExpenseCategory {
  id             String       @id @default(uuid())
  organizationId String
  name           String
  active         Boolean      @default(true)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  expenses       Expense[]

  @@unique([organizationId, name])
  @@index([organizationId, active])
}

model Expense {
  id              String              @id @default(uuid())
  organizationId  String
  categoryId      String
  supplierId      String?
  purchaseOrderId String?
  description     String?
  date            DateTime
  total           Decimal             @db.Decimal(12, 2)
  status          ExpensePaymentStatus
  receiptUrl      String?
  active          Boolean             @default(true)
  createdById     String
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt
  organization    Organization        @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  category        ExpenseCategory     @relation(fields: [categoryId], references: [id])
  supplier        Supplier?           @relation(fields: [supplierId], references: [id], onDelete: SetNull)
  purchaseOrder   PurchaseOrder?      @relation(fields: [purchaseOrderId], references: [id], onDelete: SetNull)
  createdBy       User                @relation("ExpenseCreatedBy", fields: [createdById], references: [id])
  payments        ExpensePayment[]

  @@index([organizationId, date])
  @@index([organizationId, categoryId])
}

model ExpensePayment {
  id             String        @id @default(uuid())
  expenseId      String
  organizationId String
  amount         Decimal       @db.Decimal(12, 2)
  method         PaymentMethod
  date           DateTime
  createdAt      DateTime      @default(now())
  organization   Organization  @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  expense        Expense       @relation(fields: [expenseId], references: [id], onDelete: Cascade)

  @@index([organizationId, expenseId])
}

enum OrgStatus {
  TRIAL
  ACTIVE
  PAST_DUE
  SUSPENDED
}

enum PlanType {
  BASIC
  PRO
}

enum BillingStatus {
  PENDING
  PAID
  OVERDUE
}

enum OrgRole {
  OWNER
  ADMIN
  MEMBER
  CASHIER
  INVENTORY_USER
}

enum MovementType {
  PURCHASE
  SALE
  ADJUSTMENT_IN
  ADJUSTMENT_OUT
  DAMAGE
  RETURN
}

enum CustomerSegment {
  VIP
  FREQUENT
  OCCASIONAL
  INACTIVE
}

enum PaymentMethod {
  CASH
  CARD
  TRANSFER
}

enum ExpensePaymentStatus {
  PARTIAL
  PAID
}

enum PaymentRecordStatus {
  PENDING
  PAID
  FAILED
}

enum SaleStatus {
  OPEN
  CLOSED
  COMPLETED
  CANCELLED
  RETURNED_PARTIAL
}

enum TaskStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum TaskEventType {
  CREATED
  UPDATED
  STATUS_CHANGED
  DELETED
}

enum PurchaseOrderStatus {
  DRAFT
  PENDING
  PARTIAL_RECEIVED
  RECEIVED
  CANCELLED
}
